DemoMyApp/src/objects/Comments__c.object
<CustomObject>
    <description>Custom objects to try and eliminate the need to use Notes &amp; Attachments related list</description>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Notes_and_Attachments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>The profile of the person who writes the note</description>
        <label>Role</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Written_By__c</fullName>
        <label>Written By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Written_Date__c</fullName>
        <label>Written Date</label>
        <type>DateTime</type>
    </fields>
    <label>Comments</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>